figured out safari border issue, made project z-index 1 and changed back to border from box-shadow

--- a/styles/sass/partials/_work.scss
+++ b/styles/sass/partials/_work.scss
@@ -6,6 +6,7 @@
     position: relative;
     padding: 10px 0;
     margin: 5px 0;
+    z-index: 1;
 
     &:first-child {
       margin-top: 0;
@@ -27,9 +28,8 @@
 
   .project--background {
     background-color:rgba(34, 34, 34, 0.67);
-    box-shadow: 1px 1px #0dd;
-    // border-bottom: 1px solid #0dd;
-    // border-right: 1px solid #0dd;
+    border-bottom: 1px solid #0dd;
+    border-right: 1px solid #0dd;
     top: 0;
     right: 0;
     bottom: 0;
